--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" -}}
 <div class="post">
-  {{ partial "post/info.html" . }}
+  <!-- {{ partial "post/info.html" . }} -->
   {{ .Content }}
 </div>
 {{- end }}
