--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,11 @@
+.sidebar-about img {
+	border-bottom-left-radius: 0%;
+	border-bottom-right-radius: 0%;
+	border-top-left-radius: 0%;
+	border-top-right-radius: 0%;
+	margin-left: 0px;
+}
+
 .sidebar-about h1 {
   font-size: 1.4em;
   font-family: "Go Mono", monospace;
@@ -46,3 +54,148 @@
 .post li {
   font-family: "IBM Plex Serif", serif;
 }
+
+/* Go Mono Regular */
+@font-face {
+  font-family: 'Go Mono';
+  src: url('/fonts/Go-Mono.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* Go Mono Italic */
+@font-face {
+  font-family: 'Go Mono';
+  src: url('/fonts/Go-Mono-Italic.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+}
+
+/* Go Mono Bold */
+@font-face {
+  font-family: 'Go Mono';
+  src: url('/fonts/Go-Mono-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+/* Go Mono Bold Italic */
+@font-face {
+  font-family: 'Go Mono';
+  src: url('/fonts/Go-Mono-Bold-Italic.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+}
+
+/* IBM Plex Serif Regular */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* IBM Plex Serif Italic */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-Italic.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+}
+
+/* IBM Plex Serif Thin */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-Thin.woff') format('woff');
+  font-weight: 100;
+  font-style: normal;
+}
+
+/* IBM Plex Serif Thin Italic */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-ThinItalic.woff') format('woff');
+  font-weight: 100;
+  font-style: italic;
+}
+
+/* IBM Plex Serif ExtraLight */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-ExtraLight.woff') format('woff');
+  font-weight: 200;
+  font-style: normal;
+}
+
+/* IBM Plex Serif ExtraLight Italic */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-ExtraLightItalic.woff') format('woff');
+  font-weight: 200;
+  font-style: italic;
+}
+
+/* IBM Plex Serif Light */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+
+/* IBM Plex Serif Light Italic */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-LightItalic.woff') format('woff');
+  font-weight: 300;
+  font-style: italic;
+}
+
+/* IBM Plex Serif Medium */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+/* IBM Plex Serif Medium Italic */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-MediumItalic.woff') format('woff');
+  font-weight: 500;
+  font-style: italic;
+}
+
+/* IBM Plex Serif SemiBold */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
+
+/* IBM Plex Serif SemiBold Italic */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-SemiBoldItalic.woff') format('woff');
+  font-weight: 600;
+  font-style: italic;
+}
+
+/* IBM Plex Serif Bold */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+/* IBM Plex Serif Bold Italic */
+@font-face {
+  font-family: 'IBM Plex Serif';
+  src: url('/fonts/IBMPlexSerif-BoldItalic.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+}
+
