--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -28,6 +28,14 @@
   text-align: left;
 }
 
+.article-toc li {
+  font-size: 1em;
+  font-family: "Go Mono", monospace;
+  text-align: left;
+  /* margin-top: 8px; */
+  margin: 20px;
+}
+
 /* .sidebar-nav { */
 /* 	margin-bottom: 7rem */
 /* } */
@@ -57,16 +65,28 @@
 }
 
 .post p {
-  font-family: "IBM Plex Serif", serif;
+  font-family: "IBM Plex Serif Text", serif;
 }
 
 .post li {
-  font-family: "IBM Plex Serif", serif;
+  font-family: "IBM Plex Serif Text", serif;
 }
 
 .content p {
-  font-family: "IBM Plex Serif", serif;
+  font-family: "IBM Plex Serif Text", serif;
   text-align: left;
+}
+
+/* code (i.e., bibtex) side scrolls instead of text wrap */
+pre > code {
+  white-space: pre;
+  overflow-x: auto;
+  display: block;
+}
+
+.post summary {
+	/* font-size: 0.8em; */
+	font-family: "Go Mono", monospace;
 }
 
 /* Go Mono Regular */
