--- a/layouts/partials/sidebar/sidebar.html
+++ b/layouts/partials/sidebar/sidebar.html
@@ -2,7 +2,9 @@
     <div class="container sidebar-sticky">
         {{ partial "sidebar/title.html" . }}
         {{ partial "sidebar/menu.html" . }}
-        {{ partial "sidebar/socials.html" . }}
+        <div class="sidebar-socials">
+            {{ partial "sidebar/socials.html" . }}
+        </div>
         {{ partial "sidebar/copyright.html" . }}
   </div>
 </aside>
